auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "291f3286",
+   "id": "9dbb4c26",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c7ca92",
+   "id": "0edbef56",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6afedc42",
+   "id": "60bb441b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9434ccd",
+   "id": "550de60b",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038813ee",
+   "id": "61e51592",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "641d664f",
+   "id": "dae6709b",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4483a10e",
+   "id": "8048cd3c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6160a83b",
+   "id": "b451cb5d",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68cfd790",
+   "id": "28ecb2a3",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64232c66",
+   "id": "67c25277",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfb92ce",
+   "id": "c56caca1",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aa5e650",
+   "id": "10cee739",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27cc5497",
+   "id": "71c85567",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1669aa33",
+   "id": "9fb1c367",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22efa138",
+   "id": "8a627e45",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6bc3233",
+   "id": "c6763fa4",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc08878",
+   "id": "69c44819",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "241885bb",
+   "id": "fba52be8",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b68acd47",
+   "id": "ec301370",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08478c0b",
+   "id": "64e1b5f7",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd78f3d9",
+   "id": "572a50ea",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3a8bca8",
+   "id": "2bd9a914",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c42f5659",
+   "id": "4dd74936",
    "metadata": {
     "hide-output": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58413f86",
+   "id": "5dbc89fd",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8222082c",
+   "id": "3d4a4267",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f579464d",
+   "id": "c7332c9a",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "811b8cf4",
+   "id": "d6de5f0f",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f803f14c",
+   "id": "dee3b83b",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb06d4f5",
+   "id": "a564bf4a",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a92412",
+   "id": "a7bd4bce",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88612aab",
+   "id": "b7ec3991",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89122d35",
+   "id": "677b8006",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70bdc38b",
+   "id": "41c7da23",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307ab442",
+   "id": "4dc3a41c",
    "metadata": {
     "hide-output": false
    },
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55ffa5d",
+   "id": "6f627806",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2843de5c",
+   "id": "e8995932",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c225d5",
+   "id": "6694f499",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc17dc4f",
+   "id": "d86ed73f",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295a4cec",
+   "id": "288212fb",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d27c4e3",
+   "id": "a8ddeb38",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a97999",
+   "id": "b0112fc0",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a25cd5",
+   "id": "76b528be",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad8d1e43",
+   "id": "4babe278",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6e5d7c",
+   "id": "f447bbb8",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a3c491c",
+   "id": "6ac07a18",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc3da66",
+   "id": "542385c0",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fdd560",
+   "id": "14e729eb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0108a35",
+   "id": "be0fa966",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f6cab54",
+   "id": "a0f03d8d",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac218936",
+   "id": "3a78a338",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e40669c",
+   "id": "825779f2",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cab79e5e",
+   "id": "eb7eb6ff",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb43631",
+   "id": "82308cb4",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824b2acb",
+   "id": "9096754d",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cbd940f",
+   "id": "94e37902",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70387d4",
+   "id": "2bc21840",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33db449d",
+   "id": "70e6ddaa",
    "metadata": {
     "hide-output": false
    },
@@ -1278,7 +1278,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848030.361323,
+  "date": 1764852957.2295754,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
