--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d98ed8d3",
+   "id": "e72c1394",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdb40ff",
+   "id": "8dfa6a25",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8670c4e",
+   "id": "6edc0914",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45f1d48",
+   "id": "8e5fa4e4",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aabfad97",
+   "id": "c3b7ed6c",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "809f58cf",
+   "id": "e57f5ad7",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b42d58d5",
+   "id": "a2262b26",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e5d8c2",
+   "id": "e76b6e88",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d442d6",
+   "id": "d2f47c23",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6089ff5a",
+   "id": "860964a3",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48eb7053",
+   "id": "40ceb69e",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9faac5dd",
+   "id": "1ca50470",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22fae7dd",
+   "id": "ad34b5df",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83f5b8a5",
+   "id": "9e7a0fe1",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1948a0c8",
+   "id": "38f32c36",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a04e9f4",
+   "id": "8c6bc98d",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91615e3a",
+   "id": "c6329ce3",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7af7536b",
+   "id": "b0650548",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fbed7e",
+   "id": "b00a9a98",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbef93b",
+   "id": "b86dc9a6",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab21ebe",
+   "id": "30528914",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50eccf2",
+   "id": "aa815fb5",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b071df",
+   "id": "9db4443a",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cd11b45",
+   "id": "ca1db92a",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03a4a112",
+   "id": "9be130ef",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2efbfbcf",
+   "id": "52425a00",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240d4807",
+   "id": "17f1063e",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb207b23",
+   "id": "247e69e4",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39b14d31",
+   "id": "00669e09",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b68ccf",
+   "id": "2e6aa8c1",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77adb2f4",
+   "id": "cbdf6652",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f32fe9",
+   "id": "75498156",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149086b8",
+   "id": "a434ef95",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72070f9c",
+   "id": "c54c3cdd",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73bb40f6",
+   "id": "e9c6bdfc",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb13a10",
+   "id": "df7e212b",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0ec2e6",
+   "id": "258d65d6",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c30a9a5",
+   "id": "30c114bd",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ea4457",
+   "id": "eb9acfad",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d33b0c21",
+   "id": "933a50e5",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510f0182",
+   "id": "01565771",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e0ef2e",
+   "id": "012609ef",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7cd9c92",
+   "id": "70de9860",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b89a7996",
+   "id": "7a7ea561",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b1f619",
+   "id": "f55837c8",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0463d32e",
+   "id": "025ec36f",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51d6ded1",
+   "id": "73a87a4d",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7873499e",
+   "id": "24330c9d",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e9368c",
+   "id": "142f8c8a",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f02db9",
+   "id": "9593b5f5",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2be0350",
+   "id": "4b43c161",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476833f6",
+   "id": "4221a437",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40702ce0",
+   "id": "387a4215",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64e8ba12",
+   "id": "428426b9",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab80337",
+   "id": "7ebcec79",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444f9fe2",
+   "id": "b4369d03",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b601a577",
+   "id": "7570aa98",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eda78e5",
+   "id": "eef6abb7",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f27837",
+   "id": "1026b23f",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02eb1a12",
+   "id": "68715371",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa4cbaa9",
+   "id": "190779a0",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77e33e05",
+   "id": "8606b2f9",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9fe341",
+   "id": "b4122119",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37ccf32",
+   "id": "67d929d3",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c123907",
+   "id": "3e438d7f",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848030.390798,
+  "date": 1764852957.2586207,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
