--- a/ifp_dl.ipynb
+++ b/ifp_dl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "03282a4e",
+   "id": "8e827aef",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc7adaae",
+   "id": "6c4ec023",
    "metadata": {},
    "source": [
     "# Policy Gradient-Based Optimal Savings"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600bdd7b",
+   "id": "239b884e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea4e568",
+   "id": "d044518e",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70faaa09",
+   "id": "32055f20",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12e4b37",
+   "id": "8c7e1086",
    "metadata": {},
    "source": [
     "We’ll use the following imports"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d862fff",
+   "id": "2cd2715d",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b2e050a",
+   "id": "7f9aa372",
    "metadata": {},
    "source": [
     "## Theory\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d557ac3",
+   "id": "c72c203a",
    "metadata": {},
    "source": [
     "### Household problem\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04124776",
+   "id": "e3b6357c",
    "metadata": {},
    "source": [
     "### Lifetime Value and Optimization\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a0070e",
+   "id": "ae6d3822",
    "metadata": {},
    "source": [
     "### The policy gradient approach\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef19d4eb",
+   "id": "7ed23774",
    "metadata": {},
    "source": [
     "## Network\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8a3427",
+   "id": "e2307c82",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56f6761",
+   "id": "8927199e",
    "metadata": {},
    "source": [
     "We use a class called `LayerParams` to store parameters representing a single\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53b0505",
+   "id": "8da31f9b",
    "metadata": {
     "hide-output": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8094750f",
+   "id": "014c4a79",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using Le Cun\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "406906cc",
+   "id": "daabeae4",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba54212",
+   "id": "a7e59a11",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec85f56",
+   "id": "b15d1e89",
    "metadata": {
     "hide-output": false
    },
@@ -424,17 +424,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e932d6",
+   "id": "61ef1503",
    "metadata": {},
    "source": [
-    "Here’s a function to train the network by gradient ascent, given a generic loss\n",
-    "function."
+    "Next we write a function to train the network by gradient *descent*, given a generic loss\n",
+    "function.\n",
+    "\n",
+    ">**Note**\n",
+    ">\n",
+    ">We use gradient descent rather than ascent because we’ll employ optax, which\n",
+    "expects to be minimizing a loss function.\n",
+    "\n",
+    "To make this work, we’ll set the loss to $ - \\hat M(\\theta) $.\n",
+    "\n",
+    "Here’s the function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5257ad",
+   "id": "774e9356",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +461,6 @@
     "    models by providing an appropriate loss function.\n",
     "\n",
     "    \"\"\"\n",
-    "\n",
     "    # Initialize network parameters\n",
     "    key = random.PRNGKey(config.seed)\n",
     "    params = initialize_network(key, config.layer_sizes)\n",
@@ -503,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1783f9d6",
+   "id": "d1d3751b",
    "metadata": {},
    "source": [
     "## Cake Eating Case\n",
@@ -528,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117169ad",
+   "id": "dccd44af",
    "metadata": {},
    "source": [
     "### Cake eating loss function\n",
@@ -539,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26aef60a",
+   "id": "9c87e410",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075cb632",
+   "id": "b519ca34",
    "metadata": {},
    "source": [
     "We use CRRA utility."
@@ -566,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01230fbf",
+   "id": "36b9936b",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8628e7",
+   "id": "45cdc2e2",
    "metadata": {},
    "source": [
     "Now we provide a function that implements a consumption policy as a neural network, given the\n",
@@ -590,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9fd9af",
+   "id": "e9fe38f6",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42bd30da",
+   "id": "def0288b",
    "metadata": {},
    "source": [
     "The next function approximates lifetime value for the cake eating agent\n",
@@ -632,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c42f9af",
+   "id": "a0f45b34",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129ce55d",
+   "id": "57875b26",
    "metadata": {},
    "source": [
     "Here’s the loss function we will minimize."
@@ -683,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc52e833",
+   "id": "09a94f2e",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b854836",
+   "id": "904842c8",
    "metadata": {},
    "source": [
     "### Train and solve\n",
@@ -711,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8928720",
+   "id": "f963f69f",
    "metadata": {
     "hide-output": false
    },
@@ -723,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d67daf",
+   "id": "f8d946db",
    "metadata": {},
    "source": [
     "We test stability."
@@ -732,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0fb9af6",
+   "id": "b1841e91",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110868c8",
+   "id": "a94937bc",
    "metadata": {},
    "source": [
     "We compute the optimal consumption rate and lifetime value from the analytical\n",
@@ -753,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff61b254",
+   "id": "a4367fee",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35afb667",
+   "id": "20cd170d",
    "metadata": {},
    "source": [
     "Now let’s train the network."
@@ -776,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb88b741",
+   "id": "dd499202",
    "metadata": {
     "hide-output": false
    },
@@ -805,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74abcf1",
+   "id": "22a9f061",
    "metadata": {},
    "source": [
     "First we plot the evolution of lifetime value over the epochs."
@@ -814,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a5b75f",
+   "id": "6cdbba9e",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e646c3bf",
+   "id": "f22cdda7",
    "metadata": {},
    "source": [
     "Next we compare the learned and optimal policies."
@@ -840,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98e9dcf",
+   "id": "7e46f8d4",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f073004c",
+   "id": "fa428586",
    "metadata": {},
    "source": [
     "### Simulation\n",
@@ -879,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d392770f",
+   "id": "8f8bd7c6",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17226aa9",
+   "id": "3de450e8",
    "metadata": {},
    "source": [
     "Let’s simulate and plot path"
@@ -928,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30afde4a",
+   "id": "34b98b83",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6bd45f6",
+   "id": "7cebf7f0",
    "metadata": {},
    "source": [
     "## IFP Model\n",
@@ -970,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "634c1a64",
+   "id": "7d60cce0",
    "metadata": {},
    "source": [
     "### JAX Implementation\n",
@@ -981,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4982d077",
+   "id": "5ebba5b8",
    "metadata": {
     "hide-output": false
    },
@@ -1014,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e071c641",
+   "id": "f25a8bed",
    "metadata": {},
    "source": [
     "### Solving the IID model using the EGM\n",
@@ -1037,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b583bbc8",
+   "id": "e55dc514",
    "metadata": {
     "hide-output": false
    },
@@ -1089,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e80445b9",
+   "id": "c9222033",
    "metadata": {},
    "source": [
     "Here’s the solver using time iteration:"
@@ -1098,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104a440d",
+   "id": "5be0add4",
    "metadata": {
     "hide-output": false
    },
@@ -1139,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c17c797",
+   "id": "455e091f",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the optimal policy:"
@@ -1148,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f174ed7b",
+   "id": "dff16310",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708143a7",
+   "id": "899c3391",
    "metadata": {},
    "source": [
     "Plot the optimal consumption policy:"
@@ -1176,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b47152d",
+   "id": "e000988d",
    "metadata": {
     "hide-output": false
    },
@@ -1193,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082e9ead",
+   "id": "c8efbf4c",
    "metadata": {},
    "source": [
     "### Solving the IID model with DL\n",
@@ -1212,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6eed1c2",
+   "id": "fbae0ebf",
    "metadata": {
     "hide-output": false
    },
@@ -1267,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e52e3887",
+   "id": "31fec83d",
    "metadata": {},
    "source": [
     "The loss function is the negation of the expected lifetime value."
@@ -1276,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f6315e",
+   "id": "7ed5609b",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8adf6d0c",
+   "id": "e3ddcae7",
    "metadata": {},
    "source": [
     "Now let’s set up and train the network.\n",
@@ -1301,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3579b7f",
+   "id": "d95d46bb",
    "metadata": {
     "hide-output": false
    },
@@ -1335,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e19282",
+   "id": "154f3a2b",
    "metadata": {},
    "source": [
     "Plot the learning progress."
@@ -1344,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aacf46e",
+   "id": "1602aabf",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562c54d7",
+   "id": "3fe158ca",
    "metadata": {},
    "source": [
     "Compare EGM and DL solutions."
@@ -1369,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2deaefc5",
+   "id": "bec81cd8",
    "metadata": {
     "hide-output": false
    },
@@ -1393,7 +1401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f5fff2",
+   "id": "7909c9a2",
    "metadata": {},
    "source": [
     "The fit is quite good."
@@ -1401,7 +1409,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848030.4685106,
+  "date": 1764852957.3354228,
   "filename": "ifp_dl.md",
   "kernelspec": {
    "display_name": "Python",
