--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "82bd5da9",
+   "id": "ff1b0095",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8441a19c",
+   "id": "03c64c62",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb3d35a",
+   "id": "9f3d259b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27334d81",
+   "id": "3fffa9ad",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf053303",
+   "id": "535c93f4",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91ca1400",
+   "id": "5f5a5d9a",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed7b837",
+   "id": "2292e5f9",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5712a8f8",
+   "id": "f8138cbc",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e6c95e",
+   "id": "457f1072",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56370f3",
+   "id": "89656d8e",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88bf3999",
+   "id": "002ae730",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79ba076",
+   "id": "5ecebc5c",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,6 @@
    "source": [
     "class Config(NamedTuple):\n",
     "    epochs: int = 4000             # Number of passes through the data set\n",
-    "    num_layers: int = 4            # Depth of the network\n",
     "    output_dim: int = 10           # Output dimension of input and hidden layers\n",
     "    learning_rate: float = 0.001   # Learning rate for gradient descent\n",
     "    layer_sizes: tuple = (1, 10, 10, 10, 1)  # Sizes of each layer in the network\n",
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39e63813",
+   "id": "6d712694",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -205,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "493e4fd3",
+   "id": "62d52721",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "653a0aa9",
+   "id": "6b1e2b1a",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -240,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e03da1f",
+   "id": "1330c070",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb0ac7a",
+   "id": "eeb95125",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -279,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be443b0c",
+   "id": "9e19c8f3",
    "metadata": {
     "hide-output": false
    },
@@ -291,7 +290,7 @@
     "    ):\n",
     "    model = Sequential()\n",
     "    # Add layers to the network sequentially, from inputs towards outputs\n",
-    "    for i in range(config.num_layers-1):\n",
+    "    for i in range(len(config.layer_sizes) - 1):\n",
     "        model.add(\n",
     "           Dense(units=config.output_dim, activation=activation_function)\n",
     "        )\n",
@@ -299,7 +298,7 @@
     "    model.add(Dense(units=1))\n",
     "    # Embed training configurations\n",
     "    model.compile(\n",
-    "        optimizer=keras.optimizers.SGD(),  \n",
+    "        optimizer=keras.optimizers.SGD(),\n",
     "        loss='mean_squared_error'\n",
     "    )\n",
     "    return model"
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65af19aa",
+   "id": "437d95d1",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -319,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2966f974",
+   "id": "5b883ca3",
    "metadata": {
     "hide-output": false
    },
@@ -350,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bd2f11",
+   "id": "6af683bf",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -359,17 +358,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af24d406",
+   "id": "e4cb4eb3",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "def plot_keras_output(model, x, y, x_validate, y_validate):\n",
-    "    y_predict = model.predict(x, verbose=2)\n",
+    "    y_predict = model.predict(x_validate, verbose=2)\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.scatter(x, y)\n",
-    "    ax.plot(x, y_predict, label=\"fitted model\", color='black')\n",
+    "    ax.scatter(x_validate, y_validate, color='red', alpha=0.5)\n",
+    "    ax.plot(x_validate, y_predict, label=\"fitted model\", color='black')\n",
     "    ax.set_xlabel('x')\n",
     "    ax.set_ylabel('y')\n",
     "    plt.show()"
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2df4d9",
+   "id": "bc52cfc8",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -386,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a171b4c2",
+   "id": "d4618496",
    "metadata": {
     "hide-output": false
    },
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b47efac4",
+   "id": "297f1695",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53dd2b47",
+   "id": "1a345313",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a029996e",
+   "id": "d28670a2",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -464,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4745604b",
+   "id": "07d61d4e",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b114ddf1",
+   "id": "7d27f1cc",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -491,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81e89e98",
+   "id": "801d2d56",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3406e453",
+   "id": "6c04c442",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -520,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd5ede18",
+   "id": "bd5d87bf",
    "metadata": {
     "hide-output": false
    },
@@ -551,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a72a3c0b",
+   "id": "ab61a8ca",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1384e20a",
+   "id": "ff0f0f0e",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -574,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf5e6aa",
+   "id": "d0e6099d",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c031f051",
+   "id": "0d8f4b34",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -610,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f20782fe",
+   "id": "17e371af",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d135895",
+   "id": "86f0a3a0",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -639,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aae5661",
+   "id": "cd96d679",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ef73ae7",
+   "id": "f4f454f3",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -672,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3f4a7e",
+   "id": "8080384d",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -686,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eb782cc",
+   "id": "6395bbf4",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1fd1d46",
+   "id": "d3ffdb29",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -734,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d7dc60a",
+   "id": "cee7f3f0",
    "metadata": {
     "hide-output": false
    },
@@ -763,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7ab0af",
+   "id": "e41b0a18",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -776,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "219e01e0",
+   "id": "5b431c95",
    "metadata": {
     "hide-output": false
    },
@@ -805,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd60065",
+   "id": "545cf3f3",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
@@ -816,15 +815,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dafd0b02",
+   "id": "d916f8d3",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(x_train, y_train)\n",
-    "ax.plot(x_train.flatten(), f(θ, x_train).flatten(),\n",
+    "ax.scatter(x_validate, y_validate, color='red', alpha=0.5)\n",
+    "ax.plot(x_validate.flatten(), f(θ, x_validate).flatten(),\n",
     "        label=\"fitted model\", color='black')\n",
     "ax.set_xlabel('x')\n",
     "ax.set_ylabel('y')\n",
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeefdddf",
+   "id": "23f53656",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -846,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02fc5cf7",
+   "id": "0444d6f5",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -857,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b3da52",
+   "id": "abeb0def",
    "metadata": {
     "hide-output": false
    },
@@ -892,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc3db9a",
+   "id": "fc84d773",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -901,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e25afaa",
+   "id": "2eca004d",
    "metadata": {
     "hide-output": false
    },
@@ -929,15 +928,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6fa1337",
+   "id": "fae3df9c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(x_train, y_train)\n",
-    "ax.plot(x_train.flatten(), f(θ, x_train).flatten(),\n",
+    "ax.scatter(x_validate, y_validate, color='red', alpha=0.5)\n",
+    "ax.plot(x_validate.flatten(), f(θ, x_validate).flatten(),\n",
     "        label=\"fitted model\", color='black')\n",
     "ax.set_xlabel('x')\n",
     "ax.set_ylabel('y')\n",
@@ -946,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90575007",
+   "id": "f8427d4d",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -961,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32464921",
+   "id": "1946bb47",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41388281",
+   "id": "8b8ba558",
    "metadata": {
     "hide-output": false
    },
@@ -1022,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a161a40f",
+   "id": "c358659e",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1031,15 +1030,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8f3956",
+   "id": "8ae0d0e1",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(x_train, y_train)\n",
-    "ax.plot(x_train.flatten(), f(θ, x_train).flatten(),\n",
+    "ax.scatter(x_validate, y_validate, color='red', alpha=0.5)\n",
+    "ax.plot(x_validate.flatten(), f(θ, x_validate).flatten(),\n",
     "        label=\"fitted model\", color='black')\n",
     "ax.set_xlabel('x')\n",
     "ax.set_ylabel('y')\n",
@@ -1048,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2277661f",
+   "id": "591232c9",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1059,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59ef866d",
+   "id": "0c614915",
    "metadata": {
     "hide-output": false
    },
@@ -1105,13 +1104,16 @@
     "}\n",
     "\n",
     "df = pd.DataFrame(results)\n",
+    "# Format MSE columns to 6 decimal places\n",
+    "df['Training MSE'] = df['Training MSE'].apply(lambda x: f\"{x:.6f}\")\n",
+    "df['Validation MSE'] = df['Validation MSE'].apply(lambda x: f\"{x:.6f}\")\n",
     "print(\"\\nSummary of Training Methods:\")\n",
     "print(df.to_string(index=False))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6e73ab91",
+   "id": "c2856738",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1131,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38228e0",
+   "id": "3d20456f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1139,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e6d30ef",
+   "id": "fe25ab16",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1170,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4283ea6",
+   "id": "648683be",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 23.1](https://jax.quantecon.org/#jax_nn_ex1)\n",
@@ -1185,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a29308",
+   "id": "75c3d84f",
    "metadata": {
     "hide-output": false
    },
@@ -1229,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0310324f",
+   "id": "3324d126",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1240,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7795be",
+   "id": "1937377b",
    "metadata": {
     "hide-output": false
    },
@@ -1296,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8700e65a",
+   "id": "2e5a217e",
    "metadata": {},
    "source": [
     "**Strategy 3: Deeper Network + LR Schedule + L2 Regularization**\n",
@@ -1307,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d16cea07",
+   "id": "43ec840d",
    "metadata": {
     "hide-output": false
    },
@@ -1377,7 +1379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd6cd91",
+   "id": "d6089eba",
    "metadata": {},
    "source": [
     "**Strategy 4: Baseline + L2 Regularization**\n",
@@ -1388,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0227e332",
+   "id": "d74ef8bb",
    "metadata": {
     "hide-output": false
    },
@@ -1454,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af420b1",
+   "id": "7717c18e",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1465,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab69c7cf",
+   "id": "25775c7d",
    "metadata": {
     "hide-output": false
    },
@@ -1510,7 +1512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c04d71",
+   "id": "25a357aa",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1527,7 +1529,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848030.663169,
+  "date": 1764852957.528956,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
