--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a31911c6",
+   "id": "51ab61ac",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c376100a",
+   "id": "79353fcd",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "764e9957",
+   "id": "db02785e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7689ee",
+   "id": "75154882",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733c5695",
+   "id": "e75ace38",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e7f5f49",
+   "id": "54580507",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5c6d55",
+   "id": "b58af1f2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78d22142",
+   "id": "af3564d4",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94440226",
+   "id": "ee3a0ea7",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ee54d8",
+   "id": "ae9fac94",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91427b3a",
+   "id": "022c0a75",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbcec54f",
+   "id": "e394142b",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be3d6ef",
+   "id": "40c83799",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "029785ff",
+   "id": "4ce95a1b",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5133cdfd",
+   "id": "201cf9a1",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccbf61b3",
+   "id": "cc8d7268",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada2ca36",
+   "id": "c5ba790b",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35658af1",
+   "id": "3b78f3a8",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b2f5e8",
+   "id": "ebc6b8b4",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f30bf0c",
+   "id": "e1068624",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5abb51c1",
+   "id": "1888e914",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1647a18",
+   "id": "5c7bb133",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7ecb0a",
+   "id": "8eab12bf",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b71e5f52",
+   "id": "f07dc666",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9d213a",
+   "id": "d264a9cb",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be6bc43",
+   "id": "a0deae0d",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "799c9c4c",
+   "id": "6e059edb",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3286c3cf",
+   "id": "189f85bd",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f810fc",
+   "id": "7e8eeaa1",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68254269",
+   "id": "e033462b",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220efb11",
+   "id": "e2dbad5b",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "739511db",
+   "id": "f6df9073",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316ef4a9",
+   "id": "b564de63",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19ed7823",
+   "id": "007fea64",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dfafc37",
+   "id": "26172728",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e515dba",
+   "id": "78e03bf3",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5071c50b",
+   "id": "bd3d590a",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acfd8205",
+   "id": "b5f0fd2a",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e48a978",
+   "id": "ea1ef25f",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbd54e6",
+   "id": "6e0afaec",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aefaa1f",
+   "id": "8a30f3e2",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5047c9",
+   "id": "0bf98f86",
    "metadata": {
     "hide-output": false
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604801fc",
+   "id": "35993c39",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0171de53",
+   "id": "2504c251",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4348205",
+   "id": "d02ad17e",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff24fff",
+   "id": "93271662",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf619f7d",
+   "id": "b47b5df5",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d12f76",
+   "id": "f71a8b35",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b51819",
+   "id": "262b116c",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d14473",
+   "id": "e8c12287",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b537ae",
+   "id": "ac2fd9e5",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde59a22",
+   "id": "8eb86c5f",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628198c4",
+   "id": "a36d5a13",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f1f7419",
+   "id": "df8e0432",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7af986",
+   "id": "428f9d17",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "049e6a4a",
+   "id": "bfbbf403",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2590c042",
+   "id": "b51bc238",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2783b7fd",
+   "id": "b9b122dd",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c807f36f",
+   "id": "49031bc3",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1892b19",
+   "id": "b3b17898",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e5ee885",
+   "id": "e66bb1b5",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3491cf7",
+   "id": "bc1ff677",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f4d075",
+   "id": "3600d9ea",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd17d5e",
+   "id": "325b30ed",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ca49cb",
+   "id": "54387e8b",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ca36ba9",
+   "id": "1264731a",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362fc56d",
+   "id": "1e665557",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fefc3fe6",
+   "id": "c52a96de",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863358d4",
+   "id": "d5f5d5e0",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6329b1bb",
+   "id": "99e71d07",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1047,7 +1047,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848030.9501555,
+  "date": 1764852957.813763,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
