--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c327b53",
+   "id": "d2347e4b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d20986b",
+   "id": "24f4c5e2",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55b31e8",
+   "id": "d9298a96",
    "metadata": {},
    "source": [
     "# References\n",
@@ -39,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848031.127924,
+  "date": 1764852957.9892907,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
