--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0cba1d67",
+   "id": "29abcaa1",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3b7c7f0",
+   "id": "b1535706",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f50902",
+   "id": "1edbabf4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674688e7",
+   "id": "78e3db57",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea2a4dc",
+   "id": "23e1645d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec4bceae",
+   "id": "8965329d",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7b59ec",
+   "id": "62f43ca5",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0ac8af",
+   "id": "d27ef544",
    "metadata": {
     "hide-output": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b924bc",
+   "id": "5bc7c187",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97ee50fe",
+   "id": "15fed0a3",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb145037",
+   "id": "bee0727a",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6755ea",
+   "id": "c9af8b72",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5edab7a7",
+   "id": "565eb861",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99632e99",
+   "id": "cfac8a88",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f796d086",
+   "id": "9a6b68b3",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b6f5f2",
+   "id": "78147f22",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1a91237",
+   "id": "01967a9e",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9f6238",
+   "id": "d9c38653",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f2bba45",
+   "id": "1e5b999c",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e25501a",
+   "id": "73779beb",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53401ff4",
+   "id": "ed3e71ed",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd1e21f",
+   "id": "05bec874",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48befc95",
+   "id": "ad6db29e",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64541e2",
+   "id": "01e724f2",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e70b3e",
+   "id": "987661a1",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e726a43",
+   "id": "ee035242",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada8f5ef",
+   "id": "d3e971b2",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8d3e151",
+   "id": "60aa619d",
    "metadata": {
     "hide-output": false
    },
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f6ebb22",
+   "id": "8e4f4cb8",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51bb5992",
+   "id": "107e627f",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ef1065",
+   "id": "2cb26ef4",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f8cdb6",
+   "id": "a3f1713b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc2cc62",
+   "id": "e5a46a17",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "809480d5",
+   "id": "ece51bdd",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff177e0",
+   "id": "1007224f",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a620ea",
+   "id": "a89551f5",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b896373",
+   "id": "5142d367",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a31efd",
+   "id": "078a1f9a",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cbb968b",
+   "id": "2a4b85ea",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -665,7 +665,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848030.7322197,
+  "date": 1764852957.597247,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
