--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ca0b907",
+   "id": "a52adaf6",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b609aeef",
+   "id": "c5b78d22",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44633d4c",
+   "id": "eeb82e44",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cefa701a",
+   "id": "a581cd67",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57880821",
+   "id": "12064e4c",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "757d52b0",
+   "id": "6bbeab5c",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ed757d",
+   "id": "47662b97",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136749f2",
+   "id": "4dc8a64e",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "070e0281",
+   "id": "2227b006",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5c5f6c",
+   "id": "878b10e0",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb4adaa3",
+   "id": "17bab62f",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64487328",
+   "id": "0bee489f",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84799f6a",
+   "id": "9342ea54",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5943f0b",
+   "id": "7ac23363",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e1fefc",
+   "id": "620f64f0",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b1fb75",
+   "id": "6bdb4287",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb9fe4c",
+   "id": "c0f2aa13",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acf70535",
+   "id": "06c4a6b8",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a7355a",
+   "id": "479025e9",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02fba561",
+   "id": "8514a484",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0836ac41",
+   "id": "a6d87690",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73cd2036",
+   "id": "ef7676e5",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c969f7",
+   "id": "3dfb4d74",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca42ef1",
+   "id": "4635dddb",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8456fa93",
+   "id": "448920b1",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e21845",
+   "id": "5610a0d9",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcdf99f7",
+   "id": "4d336b29",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697d387d",
+   "id": "8485e34f",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d3c1fd",
+   "id": "e9085602",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8238bff",
+   "id": "7c7815d4",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a206ac35",
+   "id": "4842f9b2",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da46b4f9",
+   "id": "0f7c70e5",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66bbe2f0",
+   "id": "59f42687",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13286a3",
+   "id": "5c31c3c3",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b89191a",
+   "id": "1f76c261",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17fc4fbd",
+   "id": "19800064",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a69c8264",
+   "id": "e1a998b1",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d515c6",
+   "id": "879a1ae3",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90bca6c6",
+   "id": "2d7d1e08",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee8c25bf",
+   "id": "1157ccb5",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59806244",
+   "id": "924de57a",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e4b9eec",
+   "id": "27e0829c",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ebd1eeb",
+   "id": "ab119a08",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7af55573",
+   "id": "d0dbd81f",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ec27b5",
+   "id": "ed0ced99",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03a9fe47",
+   "id": "74fa6e29",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb476dc",
+   "id": "4cfb36d0",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18704444",
+   "id": "2a4f1f8f",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74416b2",
+   "id": "61909b81",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b6574d",
+   "id": "da2c24a3",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72b56f45",
+   "id": "7324cf00",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099c09ed",
+   "id": "99f090a2",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674e4e41",
+   "id": "fd4b47ee",
    "metadata": {
     "hide-output": false
    },
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ccd309",
+   "id": "5731565e",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0895204",
+   "id": "6f18af70",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0ce777f",
+   "id": "6834280c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4fd50c1",
+   "id": "e4ffeb74",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a1681f1",
+   "id": "e0a3ee77",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a575797d",
+   "id": "f1751eb7",
    "metadata": {
     "hide-output": false
    },
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cbe5baf",
+   "id": "23c75be9",
    "metadata": {
     "hide-output": false
    },
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77ffd07a",
+   "id": "230aa8b0",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f2bc169",
+   "id": "380c8c80",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "805528fd",
+   "id": "7c7d8e58",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de312a1c",
+   "id": "29960732",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b1206c7",
+   "id": "0b569afb",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429d2190",
+   "id": "41153f26",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef91088",
+   "id": "41d4d587",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac1bcd6",
+   "id": "55ebb4a2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f1b0fa",
+   "id": "0081ebdf",
    "metadata": {
     "hide-output": false
    },
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9a9d75",
+   "id": "4a97621b",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a796f5",
+   "id": "edc2f274",
    "metadata": {
     "hide-output": false
    },
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddd4d75",
+   "id": "1c942155",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f10f86f6",
+   "id": "0f9da3ee",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3643742",
+   "id": "d2c8fae7",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d548d8a",
+   "id": "366dcdaf",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1fd3e6",
+   "id": "871eb7be",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e141747",
+   "id": "cd63e0b0",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c1fe83",
+   "id": "7e929fca",
    "metadata": {
     "hide-output": false
    },
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55572ea",
+   "id": "b9870720",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "140f9fb2",
+   "id": "efdaa76d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88102f8d",
+   "id": "a8375613",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   }
  ],
  "metadata": {
-  "date": 1764848031.1207044,
+  "date": 1764852957.982348,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
